--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: "Pretendard";
-  line-height: 1.5;
-  font-weight: 400;
+@layer utilities {
+  .heading1 {
+    @apply text-xl font-semibold;
+  }
+  .heading2 {
+    @apply text-base font-bold;
+  }
+  .body1 {
+    @apply text-base font-medium;
+  }
+  .body2 {
+    @apply text-xs font-medium;
+  }
+  .body2_bold {
+    @apply text-xs font-bold;
+  }
 }
 
-body {
+* {
+  font-family: "Pretendard";
   margin: 0;
+  padding: 0;
   width: 100%;
-  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+html {
+  color: #363636;
+  background-color: #FAFAFA;
+}
+
+html, body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
