design: Implement Input

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
+
+input:focus {
+  outline: none;
+}
