design: Implement HomePage

--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,16 @@
     @apply text-base font-medium;
   }
   .body2 {
-    @apply text-xs font-medium;
+    @apply text-sm font-medium;
   }
   .body2_bold {
-    @apply text-xs font-bold;
+    @apply text-sm font-bold;
   }
   .body3 {
-    @apply text-[10px] font-medium;
+    @apply text-xs font-medium;
+  }
+  .body3_bold {
+    @apply text-xs font-bold;
   }
 }
 
