--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer utilities {
   .heading1 {
-    @apply text-xl font-semibold;
+    @apply text-lg font-bold;
   }
   .heading2 {
     @apply text-base font-bold;
@@ -51,6 +51,6 @@ input:focus {
   outline: none;
 }
 
-.btn:hover {
-  background-color: #989898;
+button:hover {
+  opacity: 0.7;
 }
